# playground

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  rustfrm.toml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/tools/CI/: Dockerfile.rust_dev_local
src/: main.rs
tools/CI/: Dockerfile.rust
ui/: Cargo.toml  README.md  index.html
ui/src/: main.rs
ui/tools/CI/: Dockerfile.rust_wasm
