[workspace]
members = [
    "api",
    "ui",
]

resolver = "2"

[profile.dev]
incremental = false      # Disable incremental builds (compatible with sccache)
debug = 2                # Include maximum debug information
overflow-checks = true   # Enable runtime checks for integer overflows
codegen-units = 16       # Use more codegen units for faster builds